--- a/main.html
+++ b/main.html
@@ -3,13 +3,13 @@
 <head>
   <title>Plot LGA</title>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-  <link rel="stylesheet" href="stylesheets/application.css" />
+  <link rel="stylesheet" href="/stylesheets/application.css" />
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
   <![endif]-->
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+  <script src="/javascripts/application.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%= csrf_meta_tags %>
 </head>
 <body>
   <div id="map"></div>
