--- a/main.html
+++ b/main.html
@@ -2,16 +2,16 @@
 <html lang='en-AU'>
 <head>
   <title>Plot LGA</title>
+  <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-  <link rel="stylesheet" href="/stylesheets/application.css" />
+  <link rel="stylesheet" href="stylesheets/application.css" />
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
   <![endif]-->
-  <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
-  <script src="/javascripts/application.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div id="map"></div>
+  <script src="javascripts/application.js"></script>
 </body>
 </html>
