--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html lang='en-AU'>
 <head>
   <title>Plot LGA</title>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
   <link rel="stylesheet" href="stylesheets/application.css" />
