--- a/atcin/main.html
+++ b/atcin/main.html
@@ -4,6 +4,7 @@
   <title>Plot LGA</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
   <link rel="stylesheet" href="stylesheets/application.css" />
   <!--[if lte IE 8]>
