implemented plotting polygons;

--- a/atcin/main.html
+++ b/atcin/main.html
@@ -2,7 +2,7 @@
 <html lang='en-AU'>
 <head>
   <title>Plot LGA</title>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
@@ -13,6 +13,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+  <h1>LGA Inputs</h1>
+  <form class="navbar-form navbar-left" role="search">
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="LGA ID" value="158">
+    </div>
+    <br>
+    <br>
+    <button id="submit" type="submit" class="btn btn-default">Submit</button>
+  </form>
+  </div>
+
   <div id="map"></div>
   <script src="javascripts/application.js"></script>
 </body>
