--- a/atcin/main.html
+++ b/atcin/main.html
@@ -20,6 +20,7 @@
     </div>
     <br>
     <br>
+    <button id="reset" type="button" class="btn btn-default">Reset</button>
     <button id="submit" type="submit" class="btn btn-default">Submit</button>
   </form>
   </div>
