--- a/atcin/main.html
+++ b/atcin/main.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <h1>Atcin</h1>
-  <h1>LGA Explorer</h1>
+  <h1>Topo Explorer</h1>
   <form class="navbar-form navbar-left" role="search">
     <div class="form-group">
       <input type="text" class="form-control" placeholder="LGA ID" value="158">
