display parent and children;

--- a/atcin/main.html
+++ b/atcin/main.html
@@ -23,9 +23,11 @@
     <br>
     <button id="submit" type="submit" class="btn btn-default">Submit</button>
   </form>
-  </div>
-
   <div id="map"></div>
+  <div id="parent"></div>
+  <div id="children"></div>
+  <div id="adjacent"></div>
+
   <script src="javascripts/application.js"></script>
 </body>
 </html>
